--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-      <a href="#">Download Ecxursion (Coming soon!)</a>
+    <a href="#"><h4>Download Ecxursion (Coming soon!)</h4></a>
+    <video src="./resources/videos/excursion.mp4"></video>
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers the places you like, and recommends new points of interest around you.</h3>
+    <p><img src="./resources/images/camp.jpg" alt="camp tent under a clear blue sky"></p>
+    <p><img src="./resources/images/phone.png alt="phone icon"></p>
+    <h2>Coming Soon for iphone and Android</h2>
+    <a href="#"><h4>Download Ecxursion (Coming soon!)</h4></a>
+    <h3 id="trademark">excursion</h3>
   </body>
 </html>
